2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Eric Carlson.

        media/video-preload.html fails
        https://bugs.webkit.org/show_bug.cgi?id=35793

        Unskip the test that now passes.

        * platform/gtk/Skipped:

2010-03-15  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Holger Freyther.

        [Qt] Change and add expected results after the fix and also remove the test from Skipped.
        https://bugs.webkit.org/show_bug.cgi?id=36060

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/fillrect-gradient-zero-stops-expected.checksum: Added.
        * platform/qt/fast/canvas/fillrect-gradient-zero-stops-expected.png: Added.
        * platform/qt/fast/canvas/fillrect-gradient-zero-stops-expected.txt:

2010-03-15  MORITA Hajime  <morrita@google.com>

        Reviewed by Alexey Proskuryakov.

        Selection.modify extends too far with 'lineboundary'.
        https://bugs.webkit.org/show_bug.cgi?id=33413

        * editing/selection/extend-selection-expected.txt:
        * platform/win/editing/selection/extend-selection-expected.txt: 
        Updated result to correct expectation that described the wrong
        behaviour for the selection expansion with 'lineboundary'
        granularity.
        
2010-03-14  Yuzo Fujishima  <yuzo@google.com>

        Reviewed by Shinichiro Hamaji.

        Always call PrintContext.end() from PrintContext::pageNumberForElement().

        Without this change, WebKit remains in printing mode after determining the page number if the specified element is found.

        https://bugs.webkit.org/show_bug.cgi?id=36049

        * platform/gtk/Skipped:
        * platform/mac/printing/return-from-printing-mode-expected.checksum: Added.
        * platform/mac/printing/return-from-printing-mode-expected.png: Added.
        * platform/mac/printing/return-from-printing-mode-expected.txt: Added.
        * platform/qt/Skipped:
        * platform/win/Skipped: