@@ -1,3 +1,13 @@
+2010-03-15  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        option-pageup/down should move cursor on chromium mac
+        https://bugs.webkit.org/show_bug.cgi?id=36108
+
+        * src/EditorClientImpl.cpp:
+        (WebKit::):
+
 2010-03-13  Eric Roman  <eroman@chromium.org>
 
         Reviewed by Adam Barth.
