@@ -1,3 +1,15 @@
+2010-03-15  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        option-pageup/down should move cursor on chromium mac
+        https://bugs.webkit.org/show_bug.cgi?id=36108
+
+        Remove waitUntilDone/notifyDone from the layout test, it's not needed
+        and causes timeouts on failure.
+
+        * editing/input/option-page-up-down.html:
+
 2010-03-12  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
 
         Reviewed by Eric Carlson.
